syntax = "proto3";

// https://docs.onflow.org/cadence/language/crypto/#hashing
enum SignatureAlgorithm {
  SIGNATURE_ALGORITHM_UNSPECIFIED = 0;
  ECDSA_P256 = 1;
  ECDSA_secp256k1 = 2;
  BLS_BLS12_381 = 3;
}

// https://docs.onflow.org/cadence/language/crypto/#hashing
enum HashAlgorithm {
  HASH_ALGORITHM_UNSPECIFIED = 0;
  SHA2_256 = 1;
  SHA2_384 = 2;
  SHA3_256 = 3;
  SHA3_384 = 4;
  KMAC128_BLS_BLS12_381 = 5;
  KECCAK_256 = 6;
}

enum ServiceStatus {
  SERVICE_STATUS_UNKNOWN = 0;
  SERVICE_STATUS_ONLINE = 1;
  SERVICE_STATUS_OFFLINE = 2;
}
